Add markdawn comments in code

--- a/Create our first Classifier.ipynb
+++ b/Create our first Classifier.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "source": [
     "- In line[3], we can clearly see that this time no extra exercise was required to split our dataset into training and testing subsets.\n",
-    "- Just by importing the `train_test_split` function from `sklearn.model_selection` we could quickly get our data split into four(4) shuffled datasets. the `train_test_split()` function must take the **data(features), target(labels) subsets** if test_size is not defined a default value of .25 will be used. which stands for 25%. In our case we've defined .5 or 50% for splitting and shuffling our dataset. **50% of 150 records 75 lines**\n",
+    "- Just by importing the `train_test_split` function from `sklearn.model_selection` we could quickly get our data split into four(4) shuffled datasets. the `train_test_split()` function must take the **data(features), target(labels)** subsets, if test_size is not defined a default value of .25 will be used. which stands for 25% of the dataset data. In our case we've defined .5 or 50% for splitting and shuffling our dataset. **50% of 150 records is 75 records or lines of our dataframe**\n",
     "- `train_test_split()` **returns: list, length=2 * len(arrays)** in our case(*we provided two(2) arrays, X and y*), four(4) arrays will be returned, 50% for training, 50% for testing. `X_train, X_test, y_train, y_test`."
    ]
   },
@@ -62,9 +62,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- It's always a good practice to visualize the datasets before starting to analyze it;\n",
+    "- It's always a good practice to visualize the data before starting to analyze it;\n",
     "- In line[4], I'm just printing the datasets shapes and preview data to ensure all is fine;\n",
-    "- The **Iris** dataset table is composed of four(4) columns of features (sepal length, sepal width, petal length, petal width) and one list containing the type of iris flowers (Setosa, Versicolor, and Virginica). That's why the features dataset are 75 lines by 4 columns while the labels are only 75 lines. \n",
+    "- The **Iris** dataset table is composed of five(5) columns, four(4) columns of features (sepal length, sepal width, petal length, petal width) and one(1) last column containing the specie of the iris flower(Setosa, Versicolor, and Virginica). \n",
     "- **X_train** - Features(data);\n",
     "- **y_train** - Labels(target);\n",
     "- **X_test** - Test data (features);\n",
@@ -82,22 +82,24 @@
      "text": [
       "(75, 4) (75,) (75, 4) (75,) \n",
       "\n",
-      "[6.1 2.8 4.7 1.2] 1 [5.7 2.8 4.1 1.3] 1\n"
+      "Train feature [6.5 3.  5.2 2. ], Train label 2, Test feature [5.  2.3 3.3 1. ], Test lable 1\n"
      ]
     }
    ],
    "source": [
     "print(X_train.shape, y_train.shape, X_test.shape, y_test.shape, \"\\n\")\n",
     "\n",
-    "print(X_train[0], y_train[0], X_test[0], y_test[0])"
+    "print(f\"Train feature {X_train[0]}, Train label {y_train[0]}, Test feature {X_test[0]}, Test lable {y_test[0]}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- (sklearn.neighbors)[https://scikit-learn.org/stable/modules/neighbors.html?highlight=knn%20classification#nearest-neighbors] provides functionality for unsupervised and supervised neighbors-based learning methods. Unsupervised nearest neighbors is the foundation of many other learning methods, notably manifold learning and spectral clustering. Supervised neighbors-based learning comes in two flavors: classification for data with discrete labels, and regression for data with continuous labels.\n",
-    "- We'll benefit of the **KNeighborsClassifier** for this exercise, we can tell by the shape of our data that we're dealing with a classification problem. **(discrete labels data composed by three flower species)**"
+    "- [sklearn.neighbors](https://scikit-learn.org/stable/modules/neighbors.html?highlight=knn%20classification#nearest-neighbors) provides functionality for unsupervised and supervised neighbors-based learning methods. Unsupervised nearest neighbors is the foundation of many other learning methods, notably manifold learning and spectral clustering. Supervised neighbors-based learning comes in two flavors: classification for data with discrete labels, and regression for data with continuous labels.\n",
+    "- We'll benefit of the **KNeighborsClassifier** for this exercise, we can tell by the shape of our data that we're dealing with a classification problem. **(discrete labels data composed by three flower species)**\n",
+    "\n",
+    "* __Note__: If `n_neighbors` parameter is not provided default value of n_neighbors=5 is used."
    ]
   },
   {
@@ -112,11 +114,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* In line[6] We fit/train the model using **X_train** as training data and **y_train** as target values"
+   ]
   },
   {
    "cell_type": "code",
@@ -139,12 +141,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Remember the **X_test** we got from the `train_test_split()` function on line[3]?\n",
+    "* We'll benefit from that unknown subset data to check how accurate the classifier is, in line[7] we call the `predict()` function inside the classifier object to predict the unknown data.   "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "pred = clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* The classifier object also provides the `score()` function to help us check in percentual terms how accurate our classifier is on predicting data that was never seen before.\n",
+    "\n",
+    "* `score()` Returns the mean accuracy on the given test data and labels.\n",
+    "\n",
+    "* In multi-label classification, this is the subset accuracy which is a harsh metric since you require for each sample that each label set be correctly predicted."
    ]
   },
   {
@@ -155,7 +176,7 @@
     {
      "data": {
       "text/plain": [
-       "94.66666666666667"
+       "96.0"
       ]
      },
      "execution_count": 8,
@@ -165,6 +186,15 @@
    ],
    "source": [
     "clf.score(X_test, y_test) * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* The same result can be achieved by using the `accuracy_score` from the `sklearn.metrics` package. \n",
+    "\n",
+    "* Note: The result is in 0 - 1 Real number range, that's why a multiplication by 100 was required."
    ]
   },
   {
@@ -184,7 +214,7 @@
     {
      "data": {
       "text/plain": [
-       "94.66666666666667"
+       "96.0"
       ]
      },
      "execution_count": 10,
@@ -195,6 +225,13 @@
    "source": [
     "accuracy_score(pred, y_test) * 100"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -213,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
