--- a/Create our first Classifier.ipynb
+++ b/Create our first Classifier.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,19 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(75, 4) (75,) (75, 4) (75,) \n",
-      "\n",
-      "Train feature [6.5 3.  5.2 2. ], Train label 2, Test feature [5.  2.3 3.3 1. ], Test lable 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(X_train.shape, y_train.shape, X_test.shape, y_test.shape, \"\\n\")\n",
     "\n",
@@ -104,13 +94,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "# from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "clf = KNeighborsClassifier()"
+    "# clf = KNeighborsClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from testKNN import testKNN\n",
+    "\n",
+    "clf = testKNN()"
    ]
   },
   {
@@ -122,20 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "KNeighborsClassifier()"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf.fit(X_train, y_train)"
    ]
@@ -150,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,20 +160,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "96.0"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf.score(X_test, y_test) * 100"
    ]
@@ -199,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "96.0"
+       "30.666666666666664"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,13 +204,6 @@
    "source": [
     "accuracy_score(pred, y_test) * 100"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
