--- a/test_Classifier_Random.ipynb
+++ b/test_Classifier_Random.ipynb
@@ -82,7 +82,7 @@
      "text": [
       "(75, 4) (75,) (75, 4) (75,) \n",
       "\n",
-      "Train feature [6.1 3.  4.6 1.4], Train label 1, Test feature [6.  2.2 5.  1.5], Test lable 2\n"
+      "Train feature [5.7 2.6 3.5 1. ], Train label 1, Test feature [6.7 2.5 5.8 1.8], Test lable 2\n"
      ]
     }
    ],
@@ -202,7 +202,7 @@
     {
      "data": {
       "text/plain": [
-       "36.0"
+       "34.66666666666667"
       ]
      },
      "execution_count": 11,
@@ -213,13 +213,6 @@
    "source": [
     "accuracy_score(pred, y_test) * 100"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
