Remove KNN classifier line from notebook

--- a/test_Classifier_Random.ipynb
+++ b/test_Classifier_Random.ipynb
@@ -82,7 +82,7 @@
      "text": [
       "(75, 4) (75,) (75, 4) (75,) \n",
       "\n",
-      "Train feature [5.7 2.6 3.5 1. ], Train label 1, Test feature [6.7 2.5 5.8 1.8], Test lable 2\n"
+      "Train feature [6.3 2.7 4.9 1.8], Train label 2, Test feature [4.9 2.4 3.3 1. ], Test lable 1\n"
      ]
     }
    ],
@@ -107,17 +107,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "# clf = KNeighborsClassifier()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from testKNN import testKNN\n",
     "\n",
     "clf = testKNN()"
@@ -132,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,16 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "34.66666666666667"
+       "32.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
