Update the predict function algorithm

--- a/test_Classifier_Random.ipynb
+++ b/test_Classifier_Random.ipynb
@@ -82,7 +82,7 @@
      "text": [
       "(75, 4) (75,) (75, 4) (75,) \n",
       "\n",
-      "Train feature [6.3 2.7 4.9 1.8], Train label 2, Test feature [4.9 2.4 3.3 1. ], Test lable 1\n"
+      "Train feature [5.5 2.4 3.8 1.1], Train label 1, Test feature [7.  3.2 4.7 1.4], Test lable 1\n"
      ]
     }
    ],
@@ -191,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "32.0"
+       "97.33333333333334"
       ]
      },
      "execution_count": 10,
@@ -202,6 +202,13 @@
    "source": [
     "accuracy_score(pred, y_test) * 100"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
